# psae_monorepo

./: .gitignore  BUILD_SERVICE_IMPLEMENTATION_PLAN.md  FIADB_FRIENDLY_BLOCKS_IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN.md  NESTED_MAP_IMPLEMENTATION_PLAN.md  README.md  SECRETS_IMPLEMENTATION_PLAN.md  SETUP.md  UPLOADS_IMPLEMENTATION_PLAN.md  build-all.sh  build-builder-images.sh  build-buildrunner.sh  build-common.sh  build-kms.sh  build-migrate.sh  build-registry.sh  build-scheduler.sh  build-web-ui.sh  build-worker.sh  deploy-common.sh  deploy-docs.sh  deploy-website.sh  docker-compose.yml  install_isolate.sh  notes.md  setup.sh  skill.md  updates.md
blocks/base/: BLOCKS.md  Cargo.toml  IMPLEMENTATION_PLAN.md  SPECIFICATION.md  SPECIFICATIONS.md  prompt.md
blocks/base/blocks/: aggregate.yaml  csv_to_parquet.yaml  filter_rows.yaml  group_by.yaml  join.yaml  map_files.yaml  map_list.yaml  map_range.yaml  mutate.yaml  parquet_to_csv.yaml  pivot.yaml  reduce_collection.yaml  reduce_join.yaml  reduce_stack.yaml  select_columns.yaml
blocks/base/src/: aggregate.rs  common.rs  csv_to_parquet.rs  filter_rows.rs  group_by.rs  join.rs  lib.rs  main.rs  map_files.rs  map_list.rs  map_range.rs  mutate.rs  parquet_to_csv.rs  pivot.rs  reduce_collection.rs  reduce_join.rs  reduce_stack.rs  select_columns.rs
blocks/base/tests/: aggregate.rs  csv_to_parquet.rs  filter_rows.rs  group_by.rs  map_files.rs  map_list.rs  map_range.rs  parquet_to_csv.rs  pipeline.rs  reduce_collection.rs  reduce_join.rs  reduce_stack.rs  select_columns.rs
blocks/base/tests/common/: mod.rs
blocks/data/: Cargo.toml  IMPLEMENTATION_PLAN.md  SPECIFICATION.md
blocks/data/blocks/: census_acs.yaml  census_tiger.yaml  fia.yaml  list.yaml  naturalearth_raster.yaml  naturalearth_vector.yaml  nhd.yaml  nlcd.yaml  osm_extract_pbf.yaml  osm_extract_shp.yaml  prism.yaml  read.yaml  read_collection.yaml  ssurgo.yaml  stat.yaml  usgs_3dep.yaml  write.yaml  write_collection.yaml
blocks/data/src/: lib.rs  list.rs  main.rs  read.rs  read_collection.rs  stat.rs  write.rs  write_collection.rs
blocks/data/src/catalog/: census_acs.rs  census_tiger.rs  fia.rs  mod.rs  naturalearth_raster.rs  naturalearth_vector.rs  nhd.rs  nlcd.rs  osm_extract_pbf.rs  osm_extract_shp.rs  prism.rs  sources.rs  ssurgo.rs  usgs_3dep.rs
blocks/data/src/common/: backend.rs  download.rs  error.rs  mod.rs  params.rs  runtime.rs  uri.rs
blocks/data/tests/: census_acs.rs  census_tiger.rs  fia.rs  list.rs  naturalearth_raster.rs  naturalearth_vector.rs  nhd.rs  nlcd.rs  osm_extract_pbf.rs  osm_extract_shp.rs  pipeline_read_then_list.rs  prism.rs  read.rs  read_collection.rs  ssurgo.rs  stat.rs  usgs_3dep.rs  write.rs  write_collection.rs
blocks/gdal/: .gitignore  IMPLEMENTATION_PLAN.md  README.md  SPECIFICATION.md  pyproject.toml  srs_info.json
blocks/gdal/blocks/: add_overviews.yaml  aspect.yaml  build_vrt.yaml  calc.yaml  clip_raster_by_extent.yaml  clip_raster_by_vector.yaml  color_relief.yaml  compare.yaml  contour.yaml  fill_nodata.yaml  grid.yaml  hillshade.yaml  info.yaml  location_info.yaml  map_raster_tiles.yaml  merge.yaml  nearblack.yaml  polygonize.yaml  proximity.yaml  raster_histogram.yaml  rasterize.yaml  reduce_mosaic.yaml  reduce_vrt.yaml  retile.yaml  roughness.yaml  sieve.yaml  slope.yaml  srs_info.yaml  tile.yaml  tile_index.yaml  tpi.yaml  transform_points.yaml  translate.yaml  tri.yaml  vector_clip.yaml  vector_difference.yaml  vector_erase.yaml  vector_identity.yaml  vector_info.yaml  vector_intersection.yaml  (+8 more)
blocks/gdal/src/gdal_blocks/: __init__.py  _common.py  _resampling.py  _terrain.py  _vector_algebra.py  add_overviews.py  aspect.py  build_vrt.py  calc.py  clip_raster_by_extent.py  clip_raster_by_vector.py  color_relief.py  compare.py  contour.py  fill_nodata.py  grid.py  hillshade.py  info.py  location_info.py  map_raster_tiles.py  merge.py  nearblack.py  polygonize.py  proximity.py  raster_histogram.py  rasterize.py  reduce_mosaic.py  reduce_vrt.py  retile.py  roughness.py  sieve.py  slope.py  srs_info.py  tile.py  tile_index.py  tpi.py  transform_points.py  translate.py  tri.py  vector_clip.py  (+13 more)
blocks/gdal/tests/: conftest.py  test_clip.py  test_crs.py  test_infrastructure.py  test_map_reduce.py  test_raster_analysis.py  test_raster_info.py  test_raster_io.py  test_raster_vector.py  test_terrain.py  test_vector_algebra.py  test_vector_info.py  test_vector_io.py
libs/python/: IMPLEMENTATION_PLAN.md  PROMPT.md  README.md  pyproject.toml
libs/python/src/: build.py  run.py  types.py
libs/python/src/spade/: __init__.py  _output.py  _scanning.py  build.py  run.py  types.py  (+1 more)
libs/python/tests/: conftest.py  test_build.py  test_output.py  test_run.py  test_scanning.py  test_secrets.py  test_types.py
(+969 files in other folders)
