[package]
name = "base"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "base"
path = "src/main.rs"

[dependencies]
spade = { path = "../../libs/rust" }
polars = { version = "0.46", features = [
    "lazy",
    "parquet",
    "csv",
    "json",
    "dtype-full",
    "strings",
    "temporal",
    "dynamic_group_by",
    "cross_join",
    "semi_anti_join",
    "is_in",
    "rows",
    "concat_str",
    "sql",
    "diagonal_concat",
    "mode",
] }
polars-sql = "0.46"
polars-ops = { version = "0.46", features = ["pivot"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
