[package]
name = "data"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "data"
path = "src/main.rs"

[dependencies]
spade = { path = "../../libs/rust" }
opendal = { version = "0.50", default-features = false, features = [
    "services-s3",
    "services-gcs",
    "services-azblob",
    "services-http",
    "services-fs",
    "services-sftp",
    "services-webdav",
    "services-gdrive",
    "services-onedrive",
    "services-dropbox",
    "services-memory",
] }
# NOTE: `services-ftp` is intentionally omitted — opendal 0.50.2's FTP
# service fails to compile against current rustls/async-native-tls
# combinations. Revisit when we upgrade opendal.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "io-util"] }
bytes = "1"
url = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "blocking", "json"] }
zip = "2"
flate2 = "1"
tar = "0.4"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
indicatif = "0.17"
tempfile = "3"
futures = "0.3"

[dev-dependencies]
tempfile = "3"
assert_fs = "1"
mockito = "1"
wiremock = "0.6"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
