[project]
name = "gdal-blocks"
version = "0.1.0"
description = "Spade block collection wrapping the GDAL/OGR Python bindings. Block IDs use the 'gdal' collection prefix."
requires-python = ">=3.12"
dependencies = [
    "spade",
    "gdal==3.10.0",
    "numpy",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[tool.uv.sources]
spade = { path = "../../libs/python", editable = true }

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "gdal_blocks"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.uv]
find-links = ["https://girder.github.io/large_image_wheels"]
no-build-package = ["gdal"]
