[project]
name = "spade"
version = "0.1.0"
description = "Spade block authoring library for Python"
readme = "README.md"
authors = [
    { name = "krbundy", email = "kenneth.bundy@maine.edu" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyyaml>=6.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
